# rust-practice

blog-actix/: Cargo.toml
blog-actix/migrations/2020-10-20-190609_create_users/: down.sql  up.sql
blog-actix/migrations/2020-10-20-211425_index_username/: up.sql
blog-actix/migrations/2020-11-10-001236_create_posts/: up.sql
blog-actix/migrations/2020-11-16-224232_create_comments/: up.sql
blog-actix/src/: errors.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
blog-actix/src/routes/: comments.rs  posts.rs  users.rs
builder/: Cargo.toml
builder-test/: Cargo.toml
builder-test/src/: main.rs
builder/src/: lib.rs  main.rs
do-addition/: Cargo.toml  build.sh  index.html
do-addition/src/: lib.rs
do-nothing/: Cargo.toml
do-nothing/src/: lib.rs
hello-bindgen/: Cargo.toml
hello-bindgen/src/: lib.rs
hello-raw/: Cargo.toml  build.sh  index.html
hello-raw/src/: lib.rs
hurl/: Cargo.toml  HTTP.sublime-syntax  JSON.subline-syntax
hurl/src/: app.rs  client.rs  config.rs  directories.rs  errors.rs  main.rs  session.rs  syntax.rs
macros/: Cargo.toml
macros/src/: main.rs
messages-actix/: Cargo.toml
messages-actix/src/: lib.rs  main.rs
minigrep/: Cargo.toml  output.txt
minigrep/src/: lib.rs  main.rs  poem.txt
numbers/: Cargo.toml
numbers/src/: lib.rs  main.rs
web-server/: 404.html  Cargo.toml  index.html
web-server/src/: lib.rs  main.rs  single_threaded_server.rs
