[package]
name = "hurl"
version = "0.1.0"
authors = ["Ruben <iruben229@gmail.com>"]
edition = "2018"

[dependencies]
dirs = "2.0"
heck = "0.3"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
reqwest = "0.9.20"
rpassword = "4.0"
toml = "0.5"